Apps_deployment/Policy-Group/Policy-api-fromAndTo/allow-api-egress-to-image.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-api-egress-to-image
  namespace: app-services
spec:
  podSelector:
    matchLabels:
      app: api-service
  policyTypes:
  - Egress
  egress:
  - to:
      - podSelector:
          matchLabels:
            app: image-service
    ports:
      - protocol: TCP
        port: 8082
  - to:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: kube-system
        podSelector:
          matchLabels:
            k8s-app: kube-dns
    ports:
      - protocol: UDP
        port: 53
      - protocol: TCP
        port: 53
