Apps_deployment/Policy-Group/Policy-api-fromAndTo/allow-api-egress-to-postgresql.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-api-egress-to-auth
  namespace: app-services
spec:
  podSelector:
    matchLabels:
      app: api-service
  policyTypes:
  - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: postgres
      namespaceSelector: 
        matchLabels:
          kubernetes.io/metadata.name: app-services
    ports: 
      - protocol: TCP
        port: 5432
