Apps_deployment/Policy-Group/Policy-api-fromAndTo/allow-api-ingress-consolidated.yml

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-api-ingress-consolidated
  namespace: app-services
spec:
  podSelector:
    matchLabels:
      app: api-service
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
        
          kubernetes.io/metadata.name: ingress-nginx
      podSelector:
        matchLabels:
         
          app.kubernetes.io/name: ingress-nginx
    ports:
    - protocol: TCP
      port: 8081
  - from:
    - podSelector:
        matchLabels:
          app: auth-service
    ports:
    - protocol: TCP
      port: 8081
  - from:
    - podSelector:
        matchLabels:
          app: image-service
    ports:
    - protocol: TCP
      port: 8081
