Apps_deployment/Policy-Group/Policy-api-fromAndTo/allow-api-ingress-from-image.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-api-ingress-from-webportal
  namespace: app-services
spec:
  podSelector:
    matchLabels:
      app: api-service
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: image-service
      namespaceSelector: 
        matchLabels:
          kubernetes.io/metadata.name: app-services
    ports: 
      - protocol: TCP
        port: 8082
  - from:
    - namespaceSelector:
        matchLabels:
          name: ingress-nginx
        podSelector:
          matchLabels:
            app.kubernetes.io/name: ingress-nginx
    ports:
      - protocol: TCP
        port: 8082
