Apps_deployment/Policy-Group/Policy-api-fromAndTo/allow-api-ingress-from-webportal.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-api-ingress-from-webportal
  namespace: app-services
spec:
  podSelector:
    matchLabels:
      app: api-service
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: frontend-service
      podSelector:
        matchLabels:
          app: webportal-service
    ports:
    - protocol: TCP
      port: 8081
